--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
          <label for="ig">Instagram Account Name</label>
          <input type="ig" value="" name="cm-f-iivly" id="fieldiivly" class="input input-default" minlength="5" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">APPLY</button>
+         <button type="submit" class="btn btn-default btn-block js-ga">APPLY NOW</button>
        </div>
        <div class="success_message" style="display:none;">         
-          <p>Thanks! Awesome stuff coming your way! Check your inbox</p>
+          <p>Thank You For Signing Up! We will review your Instagram and reply within 48 hours</p>
        </div>
        <div class="error_message" style="display:none;">         
           <p>Opps, something wrong! Please try again.</p>
