--- a/stylist/index.html
+++ b/stylist/index.html
@@ -115,7 +115,7 @@
 			                        
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="form-about-yourself">About yourself</label>
-			                        	<textarea name="cm-f-idykjh" placeholder="Describe what would you make a great Seativity stylist" 
+			                        	<textarea name="cm-f-idykjh" placeholder="Describe why would you make a great Seativity stylist" 
 			                        				class="form-about-yourself form-control" id="form-about-yourself"></textarea>
 			                        </div>
 			                        <button type="submit" class="btn">Submit</button>
