--- a/stylist/index.html
+++ b/stylist/index.html
@@ -115,7 +115,7 @@
 			                        
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="form-about-yourself">About yourself</label>
-			                        	<textarea name="cm-f-idykjh" placeholder="Describe why would you make a great Seativity stylist" 
+			                        	<textarea name="cm-f-idykjh" placeholder="Describe what you would make a great Seativity stylist" 
 			                        				class="form-about-yourself form-control" id="form-about-yourself"></textarea>
 			                        </div>
 			                        <button type="submit" class="btn">Submit</button>
@@ -134,7 +134,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>Earn unlimited commission </h2>
+	                    <h2>How Seativity Works </h2>
 	                    <div class="divider-1 wow fadeInUp"><span></span></div>
 	                </div>
 	            </div>
@@ -145,7 +145,7 @@
 	                		<!--<span aria-hidden="true" class="typcn typcn-eye-outline"></span>-->
 	                	</div>
 	                    <h3>Style clients online</h3>
-	                    <p>Access thousands of products from the brands you love</p>
+	                    <p>Access to thousands of products from the brands you love</p>
                     </div>
                     <div class="col-sm-4 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
@@ -220,8 +220,8 @@
 		                                	Seativity is	created	by	a	team	of	stylists,	designers	and	engineers,	our	team	consists	of	
 											individuals	from	JustFab,	NastyGal,	Net-A-Porter,	Vogue	and	Google.	<br>
 											At Seativity, we are dedicated to bringing personal styling at mass, by empowering
-											talented stylist to create, recommend and earn revenue. Our mission is to revive the
-											apparel shoping experience through personalized service by network of creative expert
+											talented stylists to create, recommend and earn revenue. Our mission is to revive the
+											apparel shopping experience through personalized styling service by a network of creative experts.
 		                                </p>
 	                                </div>
 	                			</div>
