add number to stylist how to. change wording on landing

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
   <meta name="google-site-verification" content="UUdlwkuTDadHsB-kp67s6myWqH3u9rIw_rZzvAx2Wz8" />
   <meta name="google-site-verification" content="QpUDfmat1i8FfotH3XqnI3QV-s0gBAXiUfjoGmVstfQ" />
-  <title>Seativity - Personal Shopping App</title>
+  <title>Seativity - Personal Stylist Online</title>
 
-  <meta name="description" content="Personal Styling By Expert"/>
+  <meta name="description" content="Personal Styling By Experts"/>
 
   <link rel="stylesheet" href="global.css">  
   <link rel="stylesheet" href="http://i.icomoon.io/public/e54e770683/Copperside/style.css">
@@ -74,18 +74,17 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Cutting-edge contemporary by creative experts</h2>
+    <h2 class="p-prelaunch__text--tagline">Personal styling service tailored to your taste</h2>
+    <p class="p-prelaunch__text--secondary">Inspire you to look and feel the best</p>
 
-    <p class="p-prelaunch__text--secondary">Join our VIP waiting list for exclusive access
-</p>
-
+   
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
        <input type="hidden" name="g" value="hg5vwS">
        <div class="input-label-default p-prelaunch__input">
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">Submit</button>
+         <button type="submit" class="btn btn-default btn-block js-ga">Join VIP Waiting List</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
@@ -102,7 +101,7 @@
    },
   });
   </script>
-    <p class="js-subscription-confirmed hideVisually">Thank you for signging up!</p>
+    <p class="js-subscription-confirmed hideVisually">Thank you for signing up!</p>
   </div>
 </div>
 
