--- a/stylist/index.html
+++ b/stylist/index.html
@@ -144,21 +144,21 @@
 	                		<img src="assets/img/backgrounds/shoe.png" />
 	                		<!--<span aria-hidden="true" class="typcn typcn-eye-outline"></span>-->
 	                	</div>
-	                    <h3>Style clients online</h3>
+	                    <h3>1. Style clients online</h3>
 	                    <p>Access to thousands of products from the brands you love</p>
                     </div>
                     <div class="col-sm-4 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
 	                		<img src="assets/img/backgrounds/smartphone.png" />
 	                	</div>
-	                    <h3>Your client purchases</h3>
+	                    <h3>2. Your client purchases</h3>
 	                    <p>We handle the shipping & logistic from our warehouses in LA, Frankfurt, Manchester, Sydney and Hong Kong</p>
                     </div>
                     <div class="col-sm-4 features-box features-box-gray wow fadeInUp">
 	                	<div class="features-box-icon">
 	                		<img src="assets/img/backgrounds/banking.png" />
 	                	</div>
-	                    <h3>Earn commission</h3>
+	                    <h3>3. Earn commission</h3>
 	                    <p>Get paid monthly + discounts on latest clothing, accessories</p>
                     </div>
 	            </div>
