--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Personal styling service tailored to your taste</h2>
-    <p class="p-prelaunch__text--secondary">Inspire you to look and feel the best</p>
+    <h2 class="p-prelaunch__text--tagline">Online Personal styling service tailored to your taste</h2>
+    <p class="p-prelaunch__text--secondary">For a limited time, join now & get free credit.</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
