--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-70342803-1', 'auto');
+  ga('create', 'UA-70843392-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -74,8 +74,8 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Online Personal styling service tailored to your taste</h2>
-    <p class="p-prelaunch__text--secondary">For a limited time, join now & get free credits.</p>
+    <h2 class="p-prelaunch__text--tagline">One on one style advice by creative experts</h2>
+    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn one year or free membership</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
@@ -84,7 +84,7 @@
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">Join VIP Waiting List</button>
+         <button type="submit" class="btn btn-default btn-block js-ga">Submit</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
