--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
   <meta name="google-site-verification" content="UUdlwkuTDadHsB-kp67s6myWqH3u9rIw_rZzvAx2Wz8" />
   <meta name="google-site-verification" content="QpUDfmat1i8FfotH3XqnI3QV-s0gBAXiUfjoGmVstfQ" />
-  <title>Seativity - Personal Stylist Online</title>
+  <title>Pures - New Premium Way to Shop</title>
 
-  <meta name="description" content="Personal Styling By Experts"/>
+  <meta name="description" content="Personal Stylist By Expert"/>
 
   <link rel="stylesheet" href="global.css">  
   <link rel="stylesheet" href="http://i.icomoon.io/public/e54e770683/Copperside/style.css">
