--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
   
   <div class="screen-sm-mt">
     <h5 class="p-misc__text--primary">Facebook</h5>
-    <p>Using Facebook as well as other Site connection methods, we may utilize your personal data to better your individual Everlane experience. We take your privacy seriously and abide by all Facebook terms, policies and agreements. Your data is kept secure and no actions are taken on your behalf without prior permission.
+    <p>Using Facebook as well as other Site connection methods, we may utilize your personal data to better your individual Pures experience. We take your privacy seriously and abide by all Facebook terms, policies and agreements. Your data is kept secure and no actions are taken on your behalf without prior permission.
     </p>
   </div>
 
