--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
   <meta name="google-site-verification" content="UUdlwkuTDadHsB-kp67s6myWqH3u9rIw_rZzvAx2Wz8" />
   <meta name="google-site-verification" content="QpUDfmat1i8FfotH3XqnI3QV-s0gBAXiUfjoGmVstfQ" />
-  <title>Pures - New Premium Way to Shop</title>
+  <title>Seativity - Personal Stylist Online</title>
 
-  <meta name="description" content="Personal Stylist By Expert"/>
+  <meta name="description" content="Personal Styling By Experts"/>
 
   <link rel="stylesheet" href="global.css">  
   <link rel="stylesheet" href="http://i.icomoon.io/public/e54e770683/Copperside/style.css">
@@ -75,7 +75,7 @@
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
     <h2 class="p-prelaunch__text--tagline">One on one style advice by creative experts</h2>
-    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn one year of free membership</p>
+    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn free styling session./p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
