--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
     <h2 class="p-prelaunch__text--tagline">One on one style advice by creative experts</h2>
-    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn free styling session./p>
+    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn free styling session.</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
