replace seativity on partners page

--- a/stylist/index.html
+++ b/stylist/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Seativity - Personal Styling at Mass</title>
+        <title> Pures - One to One Fashion Styling</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">        
@@ -68,7 +68,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="index.html">Seativity</a>
+						<a class="navbar-brand" href="index.html">Pures</a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -94,7 +94,7 @@
                         <div class="col-sm-5 form-box wow fadeInUp">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                        			<h3>Become a Seativity Stylist</h3>
+                        			<h3>Become a Pures Stylist</h3>
                         		</div>
                         		<div class="form-top-right">
                         		</div>
@@ -126,7 +126,7 @@
 			                        
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="form-about-yourself">About yourself</label>
-			                        	<textarea name="cm-f-idykjh" placeholder="Describe what you would make a great Seativity stylist" 
+			                        	<textarea name="cm-f-idykjh" placeholder="Describe what you would make a great Pures stylist" 
 			                        				class="form-about-yourself form-control" id="form-about-yourself"></textarea>
 			                        </div>
 			                        <button type="submit" class="btn">Submit</button>
@@ -145,7 +145,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>How Seativity Works </h2>
+	                    <h2>How Pures Works </h2>
 	                    <div class="divider-1 wow fadeInUp"><span></span></div>
 	                </div>
 	            </div>
@@ -228,9 +228,9 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	Seativity is	created	by	a	team	of	stylists,	designers	and	engineers,	our	team	consists	of	
+		                                	Pures is	created	by	a	team	of	stylists,	designers	and	engineers,	our	team	consists	of	
 											individuals	from	JustFab,	NastyGal,	Net-A-Porter,	Vogue	and	Google.	<br>
-											At Seativity, we are dedicated to bringing personal styling at mass, by empowering
+											At Pures, we are dedicated to bringing personal styling at mass, by empowering
 											talented stylists to create, recommend and earn revenue. Our mission is to revive the
 											apparel shopping experience through personalized styling service by a network of creative experts.
 		                                </p>
