--- a/index2.html
+++ b/index2.html
@@ -26,21 +26,6 @@
 
 </script>
 
-<!-- Google Analytics Content Experiment code -->
-<script>function utmx_section(){}function utmx(){}(function(){var
-k='112687166-0',d=document,l=d.location,c=d.cookie;
-if(l.search.indexOf('utm_expid='+k)>0)return;
-function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-</script><script>utmx('url','A/B');</script>
-<!-- End of Google Analytics Content Experiment code -->
-
 </head>
 
 
@@ -89,9 +74,9 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">One on one style advice by creative experts</h2>
-    <p class="p-prelaunch__text--secondary">Coming Spring 2016</p>
-    <p class="p-prelaunch__text--secondary">Join VIP waiting list now & Earn free styling session.</p>
+    <h2 class="p-prelaunch__text--tagline">Look Sharp, Live Crazy</h2>
+    <p class="p-prelaunch__text--secondary">Coming Soon Spring 2016</p>
+    <p class="p-prelaunch__text--secondary">Join VIP waiting list now.</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
@@ -100,7 +85,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">Submit</button>
+         <button type="submit" onClick=”_gaq.push([‘_trackEvent’, 'email', 'enter', 'submit', 0]);” class="btn btn-default btn-block js-ga">Earn free styling session</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
