--- a/landing3.html
+++ b/landing3.html
@@ -74,7 +74,7 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Look Sharp, Live Crazy</h2>
+    <h2 class="p-prelaunch__text--tagline">Looks New and Now crafted to you by creative experts</h2>
     <p class="p-prelaunch__text--secondary">Coming Soon Spring 2016</p>
     <p class="p-prelaunch__text--secondary">Join VIP waiting list now.</p>
 
@@ -111,7 +111,7 @@
     var img= new Image();
 
     // Specify the source for the image
-    var imgSource = 'landing2.jpg';
+    var imgSource = 'landing3.jpg';
     // only append the corresponding LI after the image is loaded
     img.onload = function() {
       $('.js-landing-bg').attr("style", "background-image:url('" + imgSource + "');height:100%;");
