--- a/landing4.html
+++ b/landing4.html
@@ -74,9 +74,9 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Look Sharp, Live Crazy</h2>
+    <h2 class="p-prelaunch__text--tagline">Looks New and Now</h2>
     <p class="p-prelaunch__text--secondary">Coming Soon Spring 2016</p>
-    <p class="p-prelaunch__text--secondary">Join VIP waiting list now.</p>
+    <p class="p-prelaunch__text--secondary">Join VIP waiting list.</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
@@ -111,7 +111,7 @@
     var img= new Image();
 
     // Specify the source for the image
-    var imgSource = 'landing2.jpg';
+    var imgSource = 'landing4.jpg';
     // only append the corresponding LI after the image is loaded
     img.onload = function() {
       $('.js-landing-bg').attr("style", "background-image:url('" + imgSource + "');height:100%;");
