--- a/landing5.html
+++ b/landing5.html
@@ -74,9 +74,9 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--tagline">Personal Styling Online</h2>
+    <h2 class="p-prelaunch__text--tagline">Dress better by Pures creative experts</h2>
     <p class="p-prelaunch__text--secondary">Coming Soon Spring 2016</p>
-    <p class="p-prelaunch__text--secondary">Join VIP waiting list.</p>
+    <p class="p-prelaunch__text--secondary">Find out how</p>
 
    
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
