--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
        <input type="hidden" name="g" value="hg5vwS">
        <div class="input-label-default p-prelaunch__input">
-         <label for="email">Email</label>
-         <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
-         
-         <button type="submit" class="btn btn-default btn-block js-ga">Submit</button>
+          <label for="email">Email</label>
+          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
+          <button type="submit" onsubmit=”_gaq.push([‘_trackEvent’, 'email', 'enter', 'submit', 0]);” class="btn btn-default btn-block js-ga">Earn free styling session</button>
+
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
