--- a/landing5.html
+++ b/landing5.html
@@ -85,7 +85,7 @@
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" onClick=”_gaq.push([‘_trackEvent’, 'email', 'enter', 'submit', 0]);” class="btn btn-default btn-block js-ga">Earn free styling session</button>
+         <button type="submit" onsubmit=”_gaq.push([‘_trackEvent’, 'email', 'enter', 'submit', 0]);” class="btn btn-default btn-block js-ga">Earn free styling session</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
