--- a/landing4.html
+++ b/landing4.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
   <meta name="google-site-verification" content="UUdlwkuTDadHsB-kp67s6myWqH3u9rIw_rZzvAx2Wz8" />
   <meta name="google-site-verification" content="QpUDfmat1i8FfotH3XqnI3QV-s0gBAXiUfjoGmVstfQ" />
-  <title>Seativity - Personal Stylist Online</title>
+  <title>Pures | The New Premium</title>
 
   <meta name="description" content="Personal Styling By Experts"/>
 
