--- a/landing2_2.html
+++ b/landing2_2.html
@@ -85,7 +85,7 @@
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">Request An Invitation</button>
+         <button type="submit" class="btn btn-default btn-block js-ga">JOIN VIP WAITING LIST</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
