--- a/landing3_2.html
+++ b/landing3_2.html
@@ -74,18 +74,16 @@
 
 <div class="p-prelaunch aligner txt-c bg-cover bg-darken js-landing-bg" style="height: 100%;">
   <div class="aligner-item p-prelaunch__container">
-    <h2 class="p-prelaunch__text--secondary">Your financial advisor can help you become a millionaire</h2>
-    <p class="p-prelaunch__text--tagline">Our stylist will help you dress like one</p>
+    <h2 class="p-prelaunch__text--tagline">Live Stylish, Well Rounded Life</h2>
+    <p class="p-prelaunch__text--secondary">Hassle Free</p>
     <p class="p-prelaunch__text--secondary">Coming Spring 2016</p>
-
-   
 <form action="http://poon.createsend.com/t/i/s/dryktt/" method="post" id="subForm">
        <input type="hidden" name="g" value="hg5vwS">
        <div class="input-label-default p-prelaunch__input">
          <label for="email">Email</label>
          <input type="email" value="" name="cm-dryktt-dryktt" id="k_id_email" class="input input-default" required>
          
-         <button type="submit" class="btn btn-default btn-block js-ga">Request An Invitation</button>
+         <button type="submit"  class="btn btn-default btn-block js-ga">Request an Invitation</button>
        </div>
        <div class="success_message" style="display:none;">         
           <p>Thank You For Signing Up! /p>
@@ -111,7 +109,7 @@
     var img= new Image();
 
     // Specify the source for the image
-    var imgSource = 'landing2b.jpg';
+    var imgSource = 'landing4.jpg';
     // only append the corresponding LI after the image is loaded
     img.onload = function() {
       $('.js-landing-bg').attr("style", "background-image:url('" + imgSource + "');height:100%;");
@@ -122,6 +120,7 @@
   $('.js-ga').click(function(){ 
     ga('send', 'event', { eventCategory: 'Sign Up', eventAction: 'Enter', eventLabel: 'Landing', eventValue: 1});
   });
+  
   
    
 </script>
